<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">digital-clock</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="sunday">SUN</string>
    <string name="pm">PM</string>
    <string name="am">AM</string>

</resources>