<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_repeat"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:id="@+id/layout_clock"
        android:layout_width="@dimen/clock_width"
        android:layout_height="@dimen/clock_height"
        android:layout_centerInParent="true"
        android:background="@color/background_white"
        android:gravity="center" >

        <LinearLayout
            android:id="@+id/layout_display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/display_margin"
            android:background="@drawable/bg_clock"
            android:orientation="vertical"
            android:paddingTop="@dimen/day_vertical_margin" >

            <LinearLayout
                android:id="@+id/layout_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/day_vertical_margin"
                android:orientation="horizontal"
                android:visibility="visible" >

                <TextView
                    android:id="@+id/tv_day1"
                    style="@style/Text.Day"
                    android:text="@string/monday"
                    android:textColor="@color/text_color_black" />

                <TextView
                    android:id="@+id/tv_day2"
                    style="@style/Text.Day"
                    android:text="@string/tuesday" />

                <TextView
                    android:id="@+id/tv_day3"
                    style="@style/Text.Day"
                    android:text="@string/wednesday" />

                <TextView
                    android:id="@+id/tv_day4"
                    style="@style/Text.Day"
                    android:text="@string/thursday" />

                <TextView
                    android:id="@+id/tv_day5"
                    style="@style/Text.Day"
                    android:text="@string/friday" />

                <TextView
                    android:id="@+id/tv_day6"
                    style="@style/Text.Day"
                    android:text="@string/saturday" />

                <TextView
                    android:id="@+id/tv_day7"
                    style="@style/Text.Day"
                    android:text="@string/sunday" >
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/time_vertical_margin"
                android:gravity="center_horizontal|bottom"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/tv_alarm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/time_divider_horizontal_margin"
                    android:src="@drawable/alarm_light" />

                <ImageView
                    android:id="@+id/img_time1"
                    style="@style/Image.Time"
                    android:src="@drawable/num_0" />

                <ImageView
                    android:id="@+id/img_time2"
                    style="@style/Image.Time"
                    android:src="@drawable/num_5" />

                <ImageView style="@style/Image.Dot" />

                <ImageView
                    android:id="@+id/img_time3"
                    style="@style/Image.Time"
                    android:src="@drawable/num_4" />

                <ImageView
                    android:id="@+id/img_time4"
                    style="@style/Image.Time"
                    android:src="@drawable/num_3" />

                <ImageView style="@style/Image.Dot" />

                <ImageView
                    android:id="@+id/img_time5"
                    style="@style/Image.Time"
                    android:src="@drawable/num_2" />

                <ImageView
                    android:id="@+id/img_time6"
                    style="@style/Image.Time"
                    android:src="@drawable/num_8" />

                <TextView
                    android:id="@+id/tv_ampm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/time_divider_horizontal_margin"
                    android:text="@string/pm"
                    android:textColor="@color/text_color_black"
                    android:textSize="@dimen/day_text_size" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>